--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -31,8 +31,71 @@ clean-targets:         # directories to be removed by `dbt clean`
 # In this example config, we tell dbt to build all models in the example/ directory
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
+
 models:
   mydbt:
-    # Applies to all files under models/example/
+    +materialized: table
+    app:
+      +materialized: view
+      +schema:  app
+      +database: |
+        {%- if target.name == "default" -%} dbt_bhanu
+        {%- elif target.name == "dev" -%} dbt_dev
+        {%- elif target.name == "qa" -%} dbt_qa
+        {%- elif target.name == "prd" -%} dbt_prd
+        {%- else -%} invalid_target_name_please_check
+        {%- endif -%}
+
+    edw:
+      +materialized: table
+      +schema:  edw
+      +database: |
+        {%- if target.name == "default" -%} dbt_bhanu
+        {%- elif target.name == "dev" -%} dbt_dev
+        {%- elif target.name == "qa" -%} dbt_qa
+        {%- elif target.name == "prd" -%} dbt_prd
+        {%- else -%} invalid_target_name_please_check
+        {%- endif -%}
+
+    stg:
+      +materialized: table
+      +schema:  stg
+      +database: |
+        {%- if target.name == "default" -%} dbt_bhanu
+        {%- elif target.name == "dev" -%} dbt_dev
+        {%- elif target.name == "qa" -%} dbt_qa
+        {%- elif target.name == "prd" -%} dbt_prd
+        {%- else -%} invalid_target_name_please_check
+        {%- endif -%}
+
     example:
-      materialized: view
+      +materialized: view
+      +schema:  stg
+      +database: |
+        {%- if target.name == "default" -%} dbt_bhanu
+        {%- elif target.name == "dev" -%} dbt_dev
+        {%- elif target.name == "qa" -%} dbt_qa
+        {%- elif target.name == "prd" -%} dbt_prd
+        {%- else -%} invalid_target_name_please_check
+        {%- endif -%}
+
+seeds:
+  +schema: src
+  +quote_columns: false
+  +database: |
+    {%- if target.name == "default" -%} dbt_bhanu
+    {%- elif target.name == "dev" -%} dbt_dev
+    {%- elif target.name == "qa" -%} dbt_qa
+    {%- elif target.name == "prd" -%} dbt_prd
+    {%- else -%} invalid_target_name_please_check
+    {%- endif -%}
+
+snapshots:
+  +target_schema: edw
+  +database: |
+    {%- if target.name == "default" -%} dbt_bhanu
+    {%- elif target.name == "dev" -%} dbt_dev
+    {%- elif target.name == "qa" -%} dbt_qa
+    {%- elif target.name == "prd" -%} dbt_prd
+    {%- else -%} invalid_target_name_please_check
+    {%- endif -%}
